# namba-search

./: .gitignore  .mcp.json  CHANGELOG.md  DISCLAIMER.md  LICENSE  PRIVACY.md  README.en.md  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
docs/: architecture.md  legacy-claude.md  migration-status.md
plugins/namba-search/: .mcp.json  README.md  pyproject.toml
plugins/namba-search/.codex-plugin/: plugin.json
plugins/namba-search/scripts/: bootstrap_runtime.py  launch_mcp.py  run_cli.py  validate_release.py
plugins/namba-search/skills/namba-search/: SKILL.md
plugins/namba-search/src/insane_search/: __init__.py  cli.py  doctor.py  mcp_server.py  research.py  service.py
plugins/namba-search/tests/mcp_contract/: test_mcp_server.py
scripts/: bootstrap_runtime.py  doctor.py  launch_mcp.py  validate_release.py
skills/namba-search/references/: platform-routes.md  result-verdicts.md  security-boundaries.md
src/insane_search/: cli.py  doctor.py  mcp_server.py
src/insane_search/adapters/: browser_transport.py
src/insane_search/engine/: __main__.py  bias_check.py  fetch_chain.py  learning.py  safety.py  validators.py  waf_detector.py
src/insane_search/extraction/: html_to_text.py  injection_signals.py
src/insane_search/persistence/: __init__.py  locks.py  trace_store.py
tests/mcp_contract/: test_mcp_server.py
tests/plugin_e2e/: test_plugin_files.py  test_skill_invocation.py
tests/security/: test_concurrent_state.py  test_redirects.py
tests/unit/: test_validators.py
(+21 files in other folders)
